k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: category-ingress-service
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
          backend:
            serviceName: frontend-service
            servicePort: 80
      - pathType: Prefix
        path: /category/?(.*)
        backend:
          service:
            name: category-api-service
            port:
              number: 5000
      - pathType: Prefix
        path: /product/?(.*)
        backend:
          service:
            name: product-api-service
            port:
              number: 5001
